--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -145,11 +145,13 @@ tracing = { workspace = true }
 tracing-futures = { workspace = true }
 utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
 utoipa-axum = { workspace = true }
-windows = { workspace = true, features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"] }
-windows-sys = { workspace = true, features = ["Win32", "Win32_System_Threading", "Win32_System_Console"] }
 
 [dev-dependencies]
 td-common = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
+
+[target.'cfg(windows)'.dependencies]
+windows = { workspace = true, features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"] }
+windows-sys = { workspace = true, features = ["Win32", "Win32_System_Threading", "Win32_System_Console"] }
