--- a/make/make-os/fragments/tasks/permit_rs.toml
+++ b/make/make-os/fragments/tasks/permit_rs.toml
@@ -38,4 +38,29 @@ script = [
         error "🚫🚫🚫🚫🚫 The Rust version is lesser than requited Rust version < ${tabsdata_rust_version} >. Make aborted."
         assert_fail
     end
+
+    components_array = array
+    array_push ${components_array} "clippy"
+    array_push ${components_array} "rustfmt"
+    components = array_join ${components_array} " "
+
+    crates_array = array
+    array_push ${crates_array} "cargo-audit"
+    array_push ${crates_array} "cargo-deny"
+    array_push ${crates_array} "cargo-edit"
+    array_push ${crates_array} "cargo-license"
+    array_push ${crates_array} "cargo-machete"
+    array_push ${crates_array} "cargo-make"
+    array_push ${crates_array} "cargo-nextest"
+    array_push ${crates_array} "cargo-outdated"
+    array_push ${crates_array} "cargo-pants"
+    array_push ${crates_array} "cargo-update"
+    array_push ${crates_array} "cargo-upgrades"
+    array_push ${crates_array} "cargo-workspaces"
+    array_push ${crates_array} "cross"
+    array_push ${crates_array} "mdbook"
+    crates = array_join ${crates_array} " "
+
+    exec --fail-on-error rustup component add %{components}
+    exec --fail-on-error cargo install --quiet --jobs 8 %{crates}
     ''']
