--- a/make/make-os/fragments/scripts/environment.toml
+++ b/make/make-os/fragments/scripts/environment.toml
@@ -308,7 +308,7 @@ env_scripts = [
         separator = set ":"
     end
 
-    python_venv  = exec --fail-on-error python-config --prefix
+    python_venv  = exec --fail-on-error python -c "import sys; print(sys.prefix)"
     python_venv = trim ${python_venv.stdout}
 
     info "🐍 Using Python environment: '${python_venv}'"
