--- a/make/make-os/fragments/common/variables.toml
+++ b/make/make-os/fragments/common/variables.toml
@@ -22,7 +22,7 @@ script = [
     on_ga_true = eq ${on_ga} "true"
     compile = set ${compile_empty} or ${compile_true}
     if ${on_ga_true}
-        set_env TD_COMPILE "false"
+        set_env TD_COMPILE "true"
     else
         if ${compile}
             set_env TD_COMPILE "true"
@@ -72,7 +72,7 @@ script = [
     on_ga_true = eq ${on_ga} "true"
     compile = set ${compile_empty} or ${compile_true}
     if ${on_ga_true}
-        set_env TD_COMPILE "false"
+        set_env TD_COMPILE "true"
     else
         if ${compile}
             set_env TD_COMPILE "true"
@@ -104,7 +104,7 @@ script = [
     on_ga_true = eq ${on_ga} "true"
     compile = set ${compile_empty} or ${compile_true}
     if ${on_ga_true}
-        set_env TD_COMPILE "false"
+        set_env TD_COMPILE "true"
     else
         if ${compile}
             set_env TD_COMPILE "true"
