--- a/requirements/requirements-dev-third-party.txt
+++ b/requirements/requirements-dev-third-party.txt
@@ -21,32 +21,33 @@ devpi-web==5.0.1
 docker==7.1.0
 fastapi==0.117.1
 flake8==7.3.0
-google-cloud-storage==3.4.0
 GitPython==3.1.45
+gita==0.16.7.3
+google-cloud-storage==3.4.0
 gTTS
 isort==6.0.1
 liccheck==0.9.2
 licensecheck==2025.1.0
 matplotlib==3.10.6
 maturin==1.9.4
-mkdocs==1.6.1
 mimesis==18.0.0
+mkdocs==1.6.1
 parquet-tools==0.2.16
 pdoc==15.0.4
-pipdeptree==2.28.0
 pip-audit==2.9.0
 pip-tools==7.5.0
 pip-upgrader==1.4.15
+pipdeptree==2.28.0
 psutil==7.1.0
 pydevd
 pydevd_pycharm
 pygame
-pytest==8.4.2
 pytest-check==2.5.4
 pytest-cov==7.0.0
 pytest-reporter-html1==0.9.3
 pytest-timeout==2.4.0
 pytest-xdist==3.8.0
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 setuptools==78.1.1
 supervisor==4.2.5
