--- a/Cross.toml
+++ b/Cross.toml
@@ -109,5 +109,6 @@ passthrough = [
     "SNW__SCHEMA",
     "SNW__USER",
     "SNW__WAREHOUSE",
+    "OPENAI_API_KEY",
     # <<< passthrough:SECRETS:END <<<
 ]
