--- a/make/make-os/fragments/tasks/clippy_rs.toml
+++ b/make/make-os/fragments/tasks/clippy_rs.toml
@@ -12,8 +12,8 @@ script = [
     '''
     !include_files ./make/make-os/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy --quiet --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} -- -D warnings"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy --quiet --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} -- -D warnings
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy %{td-rust-quiet} --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} -- -D warnings"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy %{td-rust-quiet} --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} -- -D warnings
     ''']
 
 [tasks.__os__clippy_rs_modules]
@@ -26,8 +26,8 @@ script = [
     '''
     !include_files ./make/make-os/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy --quiet --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_TABSDATA_CARGO_TOML} -- -D warnings"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy --quiet --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_TABSDATA_CARGO_TOML} -- -D warnings
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy %{td-rust-quiet} --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_TABSDATA_CARGO_TOML} -- -D warnings"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy %{td-rust-quiet} --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TD_TABSDATA_CARGO_TOML} -- -D warnings
     ''']
 
 [tasks.__os__clippy_rs_expansions]
@@ -40,6 +40,6 @@ script = [
     '''
     !include_files ./make/make-os/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy --quiet --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} -- -D warnings"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy --quiet --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} -- -D warnings
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy %{td-rust-quiet} --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} -- -D warnings"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} clippy %{td-rust-quiet} --locked %{td-target-token} %{td-target} --workspace --all-targets --all-features --profile ${td-profile} --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} -- -D warnings
     ''']
