[TD-878] Update dependencies to compile OpenSSL when using Cross (#770)

--- a/make/make-os/fragments/tasks/build_rs.toml
+++ b/make/make-os/fragments/tasks/build_rs.toml
@@ -283,7 +283,7 @@ script = [
         td_rust_quiet = set ${td-rust-quiet}
 
         debug "🚀 docker run --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata --env TD_PROFILE=${td_profile} quay.io/pypa/manylinux2014_x86_64 bash -lc ..."
-        td_script = set "yum -y install perl perl-IPC-Cmd"
+        td_script = set "yum -y install perl perl-IPC-Cmd perl-Time-Piece"
         td_script = set "${td_script} && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.89.0"
         td_script = set "${td_script} && . $HOME/.cargo/env"
         td_script = set "${td_script} && python3.12 -m pip install --upgrade pip"
